2008-02-16  Reiner Steib  <Reiner.Steib@gmx.de>

	* mail-source.el (mail-source-delete-incoming): Change default.
	Supplement doc string.

	* gnus-util.el (gnus-y-or-n-p, gnus-y-or-n-p): Update comments.

2008-02-14  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnmail.el (nnmail-message-id-cache-file): Derive from
	`gnus-home-directory'.

2008-02-11  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-topic.el (gnus-topic-select-group, gnus-topic-read-group):
	Document negativ prefix.

	* gnus-group.el (gnus-group-read-group): Document negativ prefix.

2008-02-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-unsent-separator): Add the Exim bounce
	separator.

2008-02-10  Daiki Ueno  <ueno@unixuser.org>

	* mml2015.el (mml2015-epg-sign): Remove skipped signers from the signer
	list.
	(mml2015-epg-encrypt): Remove skipped recipients/signers from the
	recipient/signer list.

2008-02-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-codepage-setup): If cp-supported-codepages isn't
	fbound (Emacs 23 unicode), signal an error.

2008-02-08  Glenn Morris  <rgm@gnu.org>

	* gnus-art.el (pgg-display-output-buffer): Declare as function.

2008-02-07  Tassilo Horn  <tassilo@member.fsf.org>

	* nnimap.el (nnimap-open-connection): Add "143" and "993" as default
	ports to the calls to `netrc-machine-user-or-password' in addition to
	"imap" and "imaps".

2008-02-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.el (gnus-group-startup-message): Add `find-image' call before
	image-load-path is let-bound.  Reported by Harald Hanche-Olsen
	<hanche@math.ntnu.no>.

2008-02-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-describe-bindings): Work for draft group.

2008-02-01  Zhang Wei  <id.brep@gmail.com>

	* rfc2047.el (rfc2047-charset-encoding-alist): Add gbk and GB18030.

	* mm-util.el (mm-mime-mule-charset-alist): Add gbk and GB18030.

2008-02-01  Miles Bader  <miles@gnu.org>

	* mml.el (mml-parse-1): Remove apparently vestigial use of